# remete2

./: README.md
docs/: README.md
docs/planning/: .gitignore  Remete2_blocks.odg
docs/planning/hardware/: Remete2_hardware.kicad_prl  Remete2_hardware.kicad_pro  Remete2_hardware.kicad_sch  TestSheet2.kicad_sch
eremite/: README.md
eremite/remete2/: README.md
esp32-wss-real-time-remote-manager/: README.md
friar/: README.md
friar/intermediary/: README.md
friar/intermediary/project/remete2-intermediary/: .gitignore  CMakeLists.txt  main.cpp
friar/regulator/: README.md
friar/regulator/global/: README.md
friar/visionary/: README.md
gatekeeper/: README.md
gatekeeper/esp32-wss-real-time-remote-manager/: .gitignore  CMakeLists.txt  README.md  notes.txt  partitions.csv  partitions.csv.s2  platformio.ini  sdkconfig.s2.template  sdkconfig.s3.template
gatekeeper/esp32-wss-real-time-remote-manager/include/: inout_channels.h  led_signals.h  main.h  serial_io.h  settings_mgr.h  srsw_commands.h  status_storage.h  user_manager.h  utils.h  webserver.h
gatekeeper/esp32-wss-real-time-remote-manager/include/sensors/: fire_alarm.h  temp_sens.h
gatekeeper/esp32-wss-real-time-remote-manager/main/: CMakeLists.txt  main.c  utils.c  workspace.code-workspace
gatekeeper/esp32-wss-real-time-remote-manager/main/_certs/: prvtkey.pem  servercert.pem
gatekeeper/esp32-wss-real-time-remote-manager/main/_html/: remote_switch.css  remote_switch.js  root.html
gatekeeper/esp32-wss-real-time-remote-manager/main/inout_channels/: inout_channels.c
gatekeeper/esp32-wss-real-time-remote-manager/main/led_signals/: led_signals.c  led_strip_rmt_dev.c  led_strip_rmt_encoder.c
gatekeeper/esp32-wss-real-time-remote-manager/main/sensors/fire_alarm/: fire_alarm.c
gatekeeper/esp32-wss-real-time-remote-manager/main/sensors/temp_sens/: temp_sens.c
gatekeeper/esp32-wss-real-time-remote-manager/main/serial_io/: serial_io.c
gatekeeper/esp32-wss-real-time-remote-manager/main/settings_mgr/: settings_mgr.c
gatekeeper/esp32-wss-real-time-remote-manager/main/srsw_commands/: srsw_commands.c
gatekeeper/esp32-wss-real-time-remote-manager/main/status_storage/: status_storage.c
gatekeeper/esp32-wss-real-time-remote-manager/main/user_manager/: user_manager.c
gatekeeper/esp32-wss-real-time-remote-manager/main/webserver/: keep_alive.c  keep_alive.h  webserver.c
gatekeeper/esp32-wss-real-time-remote-manager/patches/: lwipopts.h
